# SensorServer

./: .env.example  .eslintrc.json  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  package-lock.json  package.json  server.conf  tsconfig.json
.github/workflows/: styleCheck.yml
include/: config.h  utils.h  webhook.h
lib/: CMakeLists.txt
prisma/: postgre.sql  schema.prisma
scripts/: sentryDeploy.sh
src/: CMakeLists.txt  ConfigManager.cpp  config.json  cron.ts  index.ts  logger.cpp  main.cpp  mqtt.ts  protobuf.ts  utils.cpp  utils.ts  webhook.cpp  webhook.ts
